--- a/CleanArchitecture.Pro.Infrastructure/CleanArchitecture.Pro.Infrastructure.csproj
+++ b/CleanArchitecture.Pro.Infrastructure/CleanArchitecture.Pro.Infrastructure.csproj
@@ -1,5 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+  <ItemGroup>
+    <ProjectReference Include="..\CleanArchitecture.Pro.Application\CleanArchitecture.Pro.Application.csproj" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net10.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
