--- a/CleanArchitecture.Pro.Api/CleanArchitecture.Pro.Api.csproj
+++ b/CleanArchitecture.Pro.Api/CleanArchitecture.Pro.Api.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CleanArchitecture.Pro.Application\CleanArchitecture.Pro.Application.csproj" />
+  </ItemGroup>
+
 </Project>
