--- a/CleanArchitecture.Pro.Tests/CleanArchitecture.Pro.Tests.csproj
+++ b/CleanArchitecture.Pro.Tests/CleanArchitecture.Pro.Tests.csproj
@@ -18,4 +18,10 @@
     <Using Include="Xunit" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CleanArchitecture.Pro.Api\CleanArchitecture.Pro.Api.csproj" />
+    <ProjectReference Include="..\CleanArchitecture.Pro.Application\CleanArchitecture.Pro.Application.csproj" />
+    <ProjectReference Include="..\CleanArchitecture.Pro.Domain\CleanArchitecture.Pro.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
